servicemain.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  selector:
    page: main
  ports:
  - port: 80
